<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>husarion_ugv_crsf_interfaces</name>
  <version>1.0.0</version>
  <description>Custom messages for the CRSF teleop node</description>
  <maintainer email="support@husarion.com">Husarion</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/husarion_ugv_crsf_teleop</url>
  <url type="bugtracker">https://github.com/husarion/husarion_ugv_crsf_teleop/issues</url>

  <author email="milosz.lagan@husarion.com">Milosz Lagan</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
